Made main page list cleaner: left justify the text, more spacing, prevent bottom boxes from expanding. Added idea for community image.

--- a/style.css
+++ b/style.css
@@ -947,13 +947,17 @@ ul {
   justify-content: flex-start;
   margin: 0 0 30px;
   max-width: 100%;
-  text-align: center;
 }
 
 @media (min-width: 768px) {
   .article-blocks-item {
     margin: 0 15px 30px;
   }
+}
+
+.article-blocks-item.invisible {
+  visibility: hidden;
+  margin-bottom: 0;
 }
 
 .article-blocks-item-internal {
@@ -978,14 +982,16 @@ ul {
 }
 
 .article-blocks-item-title {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 25px;
+  text-align: center;
 }
 
 .article-blocks-item-description:not(:empty) {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: $text_color;
-  padding: 0px 3px 2px;
+  padding: 0px 20px 2px;
+  text-align: left;
 }
 
 /***** Homepage *****/
@@ -1065,10 +1071,11 @@ ul {
 }
 
 .community-image {
-  min-height: 0px;
+  min-height: 300px;
   background-image: url($community_image);
   background-position: center;
   background-repeat: no-repeat;
+  background-size: auto 300px;
   max-width: 100%;
 }
 
