--- a/styles/_custom_blocks.scss
+++ b/styles/_custom_blocks.scss
@@ -29,7 +29,7 @@
     justify-content: flex-start;
     margin: 0 0 30px;
     max-width: 100%;
-    text-align: center;
+    // text-align: center;
 
     // &:hover,
     // &:focus,
@@ -41,6 +41,11 @@
     //     // text-decoration: none;
     //   }
     // }
+
+    &.invisible {
+      visibility: hidden;
+      margin-bottom: 0;
+    }
 
     &-internal {
       background-color: transparent;
@@ -71,8 +76,9 @@
   }
 
   &-item-title {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    text-align: center;
   }
 
   // &-item-description {
@@ -80,8 +86,9 @@
   // }
 
   &-item-description:not(:empty) {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     color: $text_color;
-    padding: 0px 3px 2px;
+    padding: 0px 20px 2px;
+    text-align: left;
   }
 }
