--- a/styles/_home-page.scss
+++ b/styles/_home-page.scss
@@ -67,10 +67,11 @@
   text-align: center;
 
   &-image {
-    min-height: 0px;
+    min-height: 300px;
     background-image: url($community_image);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: auto 300px;
     max-width: 100%;
   }
 }
